...
                Task {
                    if !newValue.isEmpty {
                        await viewModel.searchMovies(query: newValue)
                    }
                }
            }
            .accessibilityIdentifier("searchBar")
            .padding(.vertical, 8)
            
            ScrollView {
                VStack(spacing: 20) {
                    Spacer()
                    
...
                        .frame(maxWidth: .infinity)
                        .padding()
                    }
                }
                .padding()
            }
            .accessibilityIdentifier("moviesTable")
        }
    }
}

#Preview {
    HomeView()
...
